--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=2a3ca029afb3417b7a76bb75da9e8395
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11"
 # IMPORTANT: You MUST also configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+DATABASE_URL=mysql://root:@127.0.0.1:3306/symsino
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
